--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     text-align: center; 
     font-family:sans-serif; 
     font-weight: lighter;
+    background-color: black;
 }
 
 h1 {
@@ -52,32 +53,61 @@ h1 {
 .button:hover {
     box-shadow: 0 8px 10px 0 rgba(0,0,0,0.24), 0 6px 10px 0 rgba(0,0,0,0.19);
   }
+  
+  .nav-brand {
+      float: left;
+  }
+  .nav-right {
+      float: right;
+  }
 
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  .topnav {
     overflow: hidden;
     background-color: #333;
   }
   
-  li {
-    float: left;
-  }
-  
-  li a {
+  .topnav a {
+    /* float: left; */
     display: block;
-    color: white;
+    color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-size: 17px;
   }
   
-  /* Change the link color to #111 (black) on hover */
-  li a:hover {
-    background-color: #111;
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
   }
-
-  .nav-right {
+  
+  .topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+  
+  .topnav .icon {
+    display: none;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
       float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
   }
