--- a/style.css
+++ b/style.css
@@ -1,169 +1,166 @@
-.html1 { 
-    background: linear-gradient( rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) ), url(img/landing.jpg) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
+.html1 {
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+    url(img/landing.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 body {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    text-align: center; 
-    font-family:'Oxygen', sans-serif; 
-    font-weight: lighter;
-    background-color: black;
-    color: #ddd;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  text-align: center;
+  font-family: "Oxygen", sans-serif;
+  font-weight: lighter;
+  background-color: black;
+  color: #ddd;
 }
 
 p {
-    text-align: left;
-    font-family: 'Cantarell', sans-serif;
+  text-align: left;
+  font-family: "Cantarell", sans-serif;
 }
 
 .body1 {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    text-align: center; 
-    font-family:sans-serif; 
-    font-weight: lighter;
-    background-color: transparent;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  text-align: center;
+  font-family: sans-serif;
+  font-weight: lighter;
+  background-color: transparent;
 }
 
 h1 {
-    text-align: inherit; 
-    font-family: inherit; 
-    font-weight: inherit;
-    color: antiquewhite;
-    text-shadow: 2px 2px black;
+  text-align: inherit;
+  font-family: inherit;
+  font-weight: inherit;
+  color: antiquewhite;
+  text-shadow: 2px 2px black;
 }
 
-
 .container1 {
-    position: relative;
-    padding-top: 15%;
-    padding-bottom:15%;
-    text-align: center;
+  position: relative;
+  padding-top: 15%;
+  padding-bottom: 15%;
+  text-align: center;
 }
 
 .container1 h1 {
-    font-size: 3.8rem;
+  font-size: 3.8rem;
 }
 
 .container2 {
-    position: relative;
-    padding-top: 5%;
-    padding-bottom:7.5%;
-    text-align: center;
+  position: relative;
+  padding-top: 5%;
+  padding-bottom: 7.5%;
+  text-align: center;
 }
 
-
 .button {
-    background-color: #333; 
-    border: none;
-    color: white;
-    padding: 8px 16px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 12px;
-  }
-  
-.button:hover {
-    box-shadow: 0 8px 10px 0 rgba(0,0,0,0.24), 0 6px 10px 0 rgba(0,0,0,0.19);
-  }
-  
-  .nav-brand {
-      float: left;
-  }
-  .nav-right {
-      float: right;
-  }
+  background-color: #333;
+  border: none;
+  color: white;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 12px;
+}
 
-  .topnav {
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  .topnav a {
-    /* float: left; */
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
-  }
-  
-  .topnav .icon {
+.button:hover {
+  box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.24), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+}
+
+.nav-brand {
+  float: left;
+}
+.nav-right {
+  float: right;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  /* float: left; */
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04aa6d;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.flex-item {
+  text-align: center;
+  padding: 2em;
+  flex: 0 33%;
+  margin-bottom: -1em;
+}
+
+.planet-image {
+  height: auto;
+  width: 25rem;
+}
+
+@media screen and (max-width: 800px) {
+  .topnav a:not(:first-child) {
     display: none;
   }
-  
-
-  
-  .flex-container {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    flex-direction: row;
+  .topnav a.icon {
+    float: right;
+    display: block;
   }
-  
-  .flex-item {
-    text-align: center;
-    padding: 2em;
-    flex: 0 33%;
-    margin-bottom: -1em;
+
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .flex-container {
+    flex-direction: column;
   }
 
   .planet-image {
-    height: auto;
-    width: 25rem;
-
-}
-
-
-  @media screen and (max-width: 800px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-  
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-
-    .flex-container {
-        flex-direction: column;
-      }
-
-      .planet-image {
-        height: 20em;
-        width: 20em;
-      }
-
-
+    height: 20em;
+    width: 20em;
+  }
 }
