--- a/style.css
+++ b/style.css
@@ -84,13 +84,14 @@ h1 {
   float: right;
 }
 
+
 .topnav {
   overflow: hidden;
   background-color: #333;
 }
 
 .topnav a {
-  /* float: left; */
+  float: left;
   display: block;
   color: #f2f2f2;
   text-align: center;
